# bird-survey

./: .gitignore  LICENCE.md  README.md  app.py  extract.py  model.py  process.py  pyproject.toml  spreadsheet.py
